# bibliocli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  worker_main.py  wrangler.toml
.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/docs/: README.md  architecture.md  codebase-map.json  data-flow.md  development-workflow.md  glossary.md  project-overview.md  security.md  testing-strategy.md  tooling.md
.context/docs/qa/: README.md  api-endpoints.md  database.md  error-handling.md  getting-started.md  project-structure.md
.context/plans/: README.md  popular-books-integration.md
.context/skills/: README.md
.context/skills/api-design/: SKILL.md
.context/skills/bug-investigation/: SKILL.md
.context/skills/code-review/: SKILL.md
.context/skills/commit-message/: SKILL.md
.context/skills/documentation/: SKILL.md
.context/skills/feature-breakdown/: SKILL.md
.context/skills/pr-review/: SKILL.md
.context/skills/refactoring/: SKILL.md
.context/skills/security-audit/: SKILL.md
.context/skills/test-generation/: SKILL.md
.context/workflow/: actions.jsonl  plans.json  status.yaml
api/: index.py
bibliocli/application/: interfaces.py
bibliocli/application/use_cases/: __init__.py  download_book.py  get_book_chapter.py  get_book_metadata.py  get_or_format_book_use_case.py  get_popular_books.py  search_books.py  search_books_by_author.py
bibliocli/domain/: entities.py  value_objects.py
bibliocli/infrastructure/cli/: cli_app.py  cli_formatter.py
bibliocli/infrastructure/providers/: gutenberg_provider.py  openlibrary_provider.py  wikisource_provider.py
bibliocli/infrastructure/services/: book_parser.py  book_repository.py  epub_formatter.py  (+3 more)
src/: main.py
src/application/: download_use_cases.py  interfaces.py  use_cases.py
src/domain/: entities.py
src/presentation/: cli_formatter.py
tests/: book_analyzer.py  extract_tocs.py  test_ai_flow.py  test_openai_formatter.py  test_smart_toc.py  test_toc.py
tests/application/: test_download_book.py  test_get_book_chapter.py  test_get_book_metadata.py  test_get_or_format_book_use_case.py  test_get_popular_books.py  test_search_books.py  test_search_books_by_author.py
tests/infrastructure/: test_epub_formatter.py  test_heuristic_formatter.py
tests/integration/: test_epub_flow.py
tests/utils/: manual_toc_inspector.py
(+52 files in other folders)
