[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "bibliocli"
version = "0.1.0"
description = "Uma CLI unificada para buscar e baixar livros de fontes públicas como WikiSource, Project Gutenberg e Open Library."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "openai==1.35.10",
    "pydantic==2.7.4",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "starlette==0.41.0",
    "typing-extensions==4.11.0",
    "typing-inspection==0.4.0",
    "workers-py>=1.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = true

[project.scripts]
bibliocli = "src.infrastructure.cli.cli_app:run_cli"
bibliocli-server = "src.infrastructure.web.server:run_server"
