[project]
name = "bibliocli"
version = "1.0.0"
description = "Uma ferramenta poderosa e unificada para buscar, baixar e formatar livros de fontes públicas."
authors = [
    { name = "Alexander Marques", email = "alexandermarquesm@gmail.com" }
]
dependencies = [
    "fastapi",
    "openai",
    "pydantic",
    "questionary",
    "requests",
    "rich",
    "uvicorn",
    "pytest",
    "python-dotenv",
    "libsql-client"
]
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["src"]

[project.scripts]
bibliocli = "src.infrastructure.cli.cli_app:run_cli"
bibliocli-server = "src.infrastructure.web.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
