[project]
name = "bibliocli"
version = "1.0.0"
description = "Uma ferramenta poderosa e unificada para buscar, baixar e formatar livros de fontes públicas."
authors = [
    { name = "Alexander Marques", email = "alexandermarquesm@gmail.com" }
]
dependencies = [
    "fastapi",
    "openai",
    "pydantic",
    "questionary",
    "requests",
    "rich",
    "uvicorn",
    "pytest",
    "EbookLib",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    "libsql-client"
]
readme = "README.md"
requires-python = ">=3.12"


[project.scripts]
bibliocli = "bibliocli.infrastructure.cli.cli_app:run_cli"
bibliocli-server = "bibliocli.infrastructure.web.server:main"

[tool.setuptools.packages.find]
where = ["."]
[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
